--- a/blogpost.html
+++ b/blogpost.html
@@ -2,6 +2,7 @@
     <head>
         <title>Bienvenido a hyperblog 2.0</title>
         <link rel="stylesheet" href="./css/style.css">
+        <meta charset="UTF-8"> 
     </head>
     <body>
         <div id="container">
@@ -29,6 +30,9 @@
                 </p>
                 <p>Suscribete y dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi xdxd
+	        </div>
         </div>
     </body>
 </html>
